syntax = "proto3";

message error {
  
}

message users {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string created_at = 5;
    string updated_at = 6;
}

message likes {
  string id = 1;
  string owner_id = 2;
  string target_id = 3;
  string created_at = 4;
  bool is_super = 5;
}

message dislikes {
  string id = 1;
  string owner_id = 2;
  string target_id = 3;
  string created_at = 4;
}

message preferences {
  string id = 1;
  string owner_id = 2;
  string language = 3;
}
